add: resource path service
